[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SkyBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/town-1-beach.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Fishing.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Town1BeachScene.gd" type="Script" id=8]

[node name="Town1BeachScene" instance=ExtResource( 1 )]
script = ExtResource( 8 )
next_music = "Idle"
hud_on = true

[node name="SkyBox" parent="." index="0" instance=ExtResource( 2 )]
background = NodePath("../Background")
rod = NodePath("../Fishing/FishingRod")

[node name="Background" type="TextureRect" parent="." index="1"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true

[node name="Fishing" parent="." index="2" instance=ExtResource( 4 )]

[connection signal="fish_caught" from="Fishing" to="." method="_on_Fishing_fish_caught"]
[connection signal="sound_effect" from="Fishing" to="." method="_on_Fishing_sound_effect"]
[connection signal="mouse_entered" from="Fishing/Margin/FishButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Fishing/Margin/FishButton" to="." method="_on_FishButton_pressed"]
[connection signal="mouse_entered" from="Fishing/Margin/BackButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Fishing/Margin/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="Fishing"]
